--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -28,3 +28,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+management.endpoints.web.exposure.include=health,info
+management.info.env.enabled=true
+info.app.name=Employee Service
+info.app.version=1.0.0
