--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=employee-service
 server.port=8080
 
+# ===============================
+# SPRING PROFILES
+# ===============================
+spring.profiles.active=dev
+
 # H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
@@ -18,7 +23,6 @@ spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
 spring.datasource.username=root
 spring.datasource.password=pass
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ===============================
@@ -33,3 +37,7 @@ management.endpoints.web.exposure.include=health,info
 management.info.env.enabled=true
 info.app.name=Employee Service
 info.app.version=1.0.0
+
+
+# JWT Configuration
+jwt.secret = 'qawsedrftgvcxzasdfrewq1234567890!@#$%^&*()_+wswsdffxvgdxctyujhazx'
