--- a/employee-service/src/main/resources/application.yml
+++ b/employee-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/employee_db
     username: root
-    password: Ajay@0511
+    password: pass
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
